--- a/index.html
+++ b/index.html
@@ -134,9 +134,15 @@ width e height → definem o tamanho da imagem na tela. -->
 <div class="col-5">
 <h2> Venha saber mais sobre Alice no País das Maravilhas </h2>
 
-<p class="p-2"> </p>
+<p class="p-3"> ORIGEM </p>
   
-<p class="p-2">  </p>
+<p class="p-3"> Escrita por Lewis Carroll, pseudônimo de Charles Lutwidge Dodgson, a obra teve origem em 1862, quando o autor estava em um passeio de barco no rio Tâmisa, juntamente com três garotinhas, Alice,Edith e Lorina. Alice, que tinha 10 anos, pediu para que ele contasse uma história. Foi assim que ele começou a narrar a aventura de Alice, que caiu em uma toca de coelho e viajou para o mundo da fantasia. Com o passar dos anos o universo de Alice se expandiu muito além dos livros, ganhando adaptações em filmes, animações, peças de teatro, quadrinhos, entre outros. </p>
+  
+  <p class="p-2"> SOBRE A OBRA</p>
+  
+<p class="p-2"> A história acompanha Alice, uma menina curiosa que, ao seguir um coelho branco, mergulha em um mundo mágico cheio de personagens excêntricos, como o Chapeleiro Maluco, a Rainha de Copas e o misterioso Gato Risonho. Cada encontro de Alice revela situações absurdas e divertidas, misturando lógica e nonsense de uma forma que faz pensar e sorrir ao mesmo tempo.
+
+Mais do que uma aventura fantástica, a obra aborda temas como imaginação, identidade e crescimento, convidando o leitor a refletir sobre regras, comportamentos e percepções da realidade. A obra também se destaca por suas ilustrações originais, que ajudaram a dar vida aos personagens e permanecem inspirando artistas até hoje. </p>
   
 <p class="p-2"> Aguardamos retorno! </p>
 </div>
